--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         <input type="text" v-model="name" />
         <p>{{ name }}</p>
         <input type="text" v-model="age" />
+        <br />
+        <div v-bind:class="{red:true}"></div>
     </div>
+        
     <script src="App.js"></script>
 </body>
 </html>
